{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 35,
  "lineage": "8a61a750-28a9-6a98-3b56-ca6dc7d7190f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "k8s_master_0_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.116.157.115",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-02T06:43:02.279-08:00",
            "id": "projects/cedar-bot-406923/regions/europe-central2/addresses/k8s-master-0-public-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "k8s-master-0-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cedar-bot-406923",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/regions/europe-central2/addresses/k8s-master-0-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/instances/master-0"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "worker_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.116.200.242",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-02T06:43:02.224-08:00",
            "id": "projects/cedar-bot-406923/regions/europe-central2/addresses/worker-0-public-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "worker-0-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cedar-bot-406923",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/regions/europe-central2/addresses/worker-0-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/instances/worker-0"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.116.239.12",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-02T06:43:02.186-08:00",
            "id": "projects/cedar-bot-406923/regions/europe-central2/addresses/worker-1-public-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "worker-1-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cedar-bot-406923",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/regions/europe-central2/addresses/worker-1-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/instances/worker-1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_subnet_allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "6443",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-12-02T06:43:13.994-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cedar-bot-406923/global/firewalls/k8s-subnet-allow-external",
            "log_config": [],
            "name": "k8s-subnet-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/networks/k8s-cluster-network",
            "priority": 1000,
            "project": "cedar-bot-406923",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/firewalls/k8s-subnet-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.k8s_cluster_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_subnet_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-12-02T06:43:14.024-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cedar-bot-406923/global/firewalls/k8s-subnet-allow-internal",
            "log_config": [],
            "name": "k8s-subnet-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/networks/k8s-cluster-network",
            "priority": 1000,
            "project": "cedar-bot-406923",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/firewalls/k8s-subnet-allow-internal",
            "source_ranges": [
              "10.240.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.k8s_cluster_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20231201",
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/disks/master-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cedar-bot-406923/zones/europe-central2-a/instances/master-0",
            "instance_id": "7432174161344527868",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "es:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcPBZSnHiMJZq4qQ4uB7g/0ZJPtCIGbPHWVzX2K0YdAsl18hFdQ4jijYnPbp852p5ODMOq1oryK5RXkz0Cpg2KmbCPGivG86jT+PZN42McsbgOLgjvy2+4xt3ehuMtZinpSjzK5UXlMWFb3/rPhlAHjUGrC98Ys1JPTjZzC57LVr+xvSVUaU1C+VAOQaUz69jcOoe4iYTXpzdsfdD7iedEUwiwXbu61JmVjAE0CYR03N0CunNBTeLCSwzq4sOqbVy0+W3Hd7CJB2IqC7O/8kls+vsHf18KzR/1DEzFMNVAeRoHnH0kpz6XkluGCVCcbuLXCZ20OMhQr0VtkjLXJ6Ei7EmrtaX+b/h2jPPACRtJCxLmaP+EnWuosU11o7T/9EGTU3aGRgRRo9HIHyqM4FgkjiNIaXq7P4IvzhTbOZHF4ceZAm [...]
            },
            "metadata_fingerprint": "2zNvJSpeORo=",
            "name": "master-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.157.115",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/networks/k8s-cluster-network",
                "network_ip": "10.240.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/regions/europe-central2/subnetworks/k8s-subnet",
                "subnetwork_project": "cedar-bot-406923"
              }
            ],
            "project": "cedar-bot-406923",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/instances/master-0",
            "service_account": [
              {
                "email": "514002972239-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-instance",
              "worker"
            ],
            "tags_fingerprint": "faibdLyfjxc=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_address.k8s_master_0_public_ip",
            "google_compute_network.k8s_cluster_network",
            "google_compute_subnetwork.k8s_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20231201",
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/disks/worker-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cedar-bot-406923/zones/europe-central2-a/instances/worker-0",
            "instance_id": "7146548107332222460",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "es:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcPBZSnHiMJZq4qQ4uB7g/0ZJPtCIGbPHWVzX2K0YdAsl18hFdQ4jijYnPbp852p5ODMOq1oryK5RXkz0Cpg2KmbCPGivG86jT+PZN42McsbgOLgjvy2+4xt3ehuMtZinpSjzK5UXlMWFb3/rPhlAHjUGrC98Ys1JPTjZzC57LVr+xvSVUaU1C+VAOQaUz69jcOoe4iYTXpzdsfdD7iedEUwiwXbu61JmVjAE0CYR03N0CunNBTeLCSwzq4sOqbVy0+W3Hd7CJB2IqC7O/8kls+vsHf18KzR/1DEzFMNVAeRoHnH0kpz6XkluGCVCcbuLXCZ20OMhQr0VtkjLXJ6Ei7EmrtaX+b/h2jPPACRtJCxLmaP+EnWuosU11o7T/9EGTU3aGRgRRo9HIHyqM4FgkjiNIaXq7P4IvzhTbOZHF4ceZAm [...]
            },
            "metadata_fingerprint": "2zNvJSpeORo=",
            "name": "worker-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.200.242",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/networks/k8s-cluster-network",
                "network_ip": "10.240.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/regions/europe-central2/subnetworks/k8s-subnet",
                "subnetwork_project": "cedar-bot-406923"
              }
            ],
            "project": "cedar-bot-406923",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/instances/worker-0",
            "service_account": [
              {
                "email": "514002972239-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-instance",
              "worker"
            ],
            "tags_fingerprint": "faibdLyfjxc=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_address.worker_public_ip",
            "google_compute_network.k8s_cluster_network",
            "google_compute_subnetwork.k8s_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20231201",
                    "size": 200,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/disks/worker-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cedar-bot-406923/zones/europe-central2-a/instances/worker-1",
            "instance_id": "7159420854462774780",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "es:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDcPBZSnHiMJZq4qQ4uB7g/0ZJPtCIGbPHWVzX2K0YdAsl18hFdQ4jijYnPbp852p5ODMOq1oryK5RXkz0Cpg2KmbCPGivG86jT+PZN42McsbgOLgjvy2+4xt3ehuMtZinpSjzK5UXlMWFb3/rPhlAHjUGrC98Ys1JPTjZzC57LVr+xvSVUaU1C+VAOQaUz69jcOoe4iYTXpzdsfdD7iedEUwiwXbu61JmVjAE0CYR03N0CunNBTeLCSwzq4sOqbVy0+W3Hd7CJB2IqC7O/8kls+vsHf18KzR/1DEzFMNVAeRoHnH0kpz6XkluGCVCcbuLXCZ20OMhQr0VtkjLXJ6Ei7EmrtaX+b/h2jPPACRtJCxLmaP+EnWuosU11o7T/9EGTU3aGRgRRo9HIHyqM4FgkjiNIaXq7P4IvzhTbOZHF4ceZAm [...]
            },
            "metadata_fingerprint": "2zNvJSpeORo=",
            "name": "worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.239.12",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/networks/k8s-cluster-network",
                "network_ip": "10.240.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/regions/europe-central2/subnetworks/k8s-subnet",
                "subnetwork_project": "cedar-bot-406923"
              }
            ],
            "project": "cedar-bot-406923",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/zones/europe-central2-a/instances/worker-1",
            "service_account": [
              {
                "email": "514002972239-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-instance",
              "worker"
            ],
            "tags_fingerprint": "faibdLyfjxc=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_address.worker_public_ip",
            "google_compute_network.k8s_cluster_network",
            "google_compute_subnetwork.k8s_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "k8s_cluster_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cedar-bot-406923/global/networks/k8s-cluster-network",
            "mtu": 0,
            "name": "k8s-cluster-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "cedar-bot-406923",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/networks/k8s-cluster-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-02T06:43:15.419-08:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/cedar-bot-406923/regions/europe-central2/subnetworks/k8s-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/global/networks/k8s-cluster-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cedar-bot-406923",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-bot-406923/regions/europe-central2/subnetworks/k8s-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.k8s_cluster_network"
          ]
        }
      ]
    }
  ]
}